# colav-interfaces

./: .gitignore  README.md  dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: workflow.yml
colav_interfaces/: CMakeLists.txt  package.xml
colav_interfaces/action/: MissionExecutor.action  StartScenarioTest.action
colav_interfaces/examples/msg/: mission_response.py
colav_interfaces/msg/agent_state/: AgentState.msg
colav_interfaces/msg/colregs/: COLREGClassification.msg  CRIClassification.msg
colav_interfaces/msg/controller_data/: ControllerFeedback.msg
colav_interfaces/msg/controller_data/data/: ControlMode.msg  ControlStatus.msg
colav_interfaces/msg/hybrid_automaton/: DynamicsUpdate.msg  FBDynamics.msg  GuardsStatus.msg  ResetAck.msg  T2LOSDynamics.msg  T2ThetaDynamics.msg  TransitionPending.msg  TransitionResult.msg  WaypointReachedDynamic.msg
colav_interfaces/msg/hybrid_automaton/dynamics/: CruiseDynamics.msg  FBDynamics.msg  T2LOSDynamics.msg  WaypointReachedDynamics.msg
colav_interfaces/msg/hybrid_automaton/resets/: CruiseToT2losReset.msg  WaypointReachedToCruiseReset.msg
colav_interfaces/msg/mission_config/: MissionRequest.msg
colav_interfaces/msg/mission_config/vessel/: VesselGeometry.msg
colav_interfaces/msg/mission_config/waypoint/: Waypoint.msg  Waypoints.msg
colav_interfaces/msg/obstacles_state/: ObstacleRiskStates.msg  ObstaclesState.msg
colav_interfaces/msg/obstacles_state/dynamic_obstacle/: DynamicObstacleGeometry.msg  DynamicObstacleRiskState.msg  DynamicObstacleState.msg
colav_interfaces/msg/obstacles_state/static_obstacle/: StaticObstacleGeometry.msg  StaticObstacleRiskState.msg  StaticObstacleState.msg
colav_interfaces/msg/params/: Params.msg
colav_interfaces/msg/params/address/: Address.msg
colav_interfaces/msg/state_updates/agent_update/: AgentUpdate.msg
colav_interfaces/msg/state_updates/collision_metrics/: CollisionMetrics.msg  DynamicObstacleCollisionMetric.msg
colav_interfaces/msg/state_updates/obstacles_update/: DynamicObstacle.msg  ObstaclesUpdate.msg  StaticObstacle.msg
colav_interfaces/msg/state_updates/obstacles_update/geometry/: DynamicObstacleGeometry.msg  StaticObstacleGeometry.msg
colav_interfaces/msg/state_updates/unsafe_set_update/: UnsafeSet.msg
colav_interfaces/msg/unsafe_set_state/: UnsafeSetState.msg
colav_interfaces/msg/waypoints_state/: Waypoint.msg  WaypointsState.msg
colav_interfaces/src/action/: MissionExecutor.action
colav_interfaces/src/examples/msg/: agent_update.py  controller_feedback.py  mission_request.py  obstacles_update.py  unsafe_set.py
colav_interfaces/src/msg/controller_data/: ControllerFeedback.msg
colav_interfaces/src/msg/mission_config/: MissionRequest.msg
colav_interfaces/src/msg/mission_config/vessel/: Vessel.msg
colav_interfaces/src/msg/state_updates/obstacles_update/: ObstaclesUpdate.msg
colav_interfaces/srv/hybrid_automaton/: EvaluateTransitions.srv  Reset.srv  StartHybridAutomaton.srv  UpdateDynamics.srv
colav_interfaces/srv/testing/: StartScenarioTest.srv
colav_interfaces/test/: test_obstacles_update_msg.py  test_unsafe_set_update_msg.py
colav_interfaces/test/msg/: test_agent_update.py  test_mission_request.py
colav_interfaces/tests/: test_agent_update_msg.py  test_controller_feedback_msg.py  test_mission_executor_action.py  test_mission_request_msg.py  test_obstacles_update_msg.py  test_params_msg.py
docs/: AgentUpdate.msg.md  mission_executor.action.md.md  obstaclesUpdate.msg.md
